--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   google_fonts: ^6.1.0
   carousel_slider: ^4.2.1
   flutter_form_builder: ^9.2.1
+  flutter_typeahead: ^5.2.0
+  multi_select_flutter: ^4.1.3
 
 dev_dependencies:
   flutter_test:
