--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_form_builder: ^9.2.1
   flutter_typeahead: ^5.2.0
   multi_select_flutter: ^4.1.3
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
@@ -70,7 +71,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+    - assets/icon.jpeg
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
