--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   flutter_typeahead: ^5.2.0
   multi_select_flutter: ^4.1.3
   cached_network_image: ^3.3.1
+  csv: ^6.0.0
+  share: ^2.0.4
 
 dev_dependencies:
   flutter_test:
